--- a/.pylintrc
+++ b/.pylintrc
@@ -202,7 +202,7 @@ max-module-lines=1000
 
 # String used as indentation unit. This is usually " " (4 spaces) or "\t" (1
 # tab).
-indent-string='\t'
+indent-string='    '
 
 
 [DESIGN]
