--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
 	"user_agent": "VoteViewBioImageScraper/1.1 (rudkin@ucla.edu; Part of NOMINATE/VoteView Congressional Ideology Project)",
-	"bio_guide_url": "http://bioguide.congress.gov/scripts/biodisplay.pl?index=",
+	"bio_guide_url": "https://bioguideretro.congress.gov/Home/MemberDetails?memIndex=",
+	"bio_guide_base": "https://bioguideretro.congress.gov",
 	"wiki_base_search_url": "http://en.wikipedia.org/w/api.php?action=query&prop=revisions&rvprop=content&format=json&titles="
 }
