--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pymongo==3.4.0
+pymongo>=3.10.0
 requests>=2.20.0
-six==1.10.0
-beautifulsoup4==4.8.1
-prettytable==0.7.2
+six>=1.15.0
+beautifulsoup4>=4.9.1
+prettytable>=0.7.2
