--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,8 @@
 	"db_host": "localhost",
 	"db_port": 27017,
 	"user_agent": "VoteViewBioImageScraper/1.1 (rudkin@ucla.edu; Part of NOMINATE/VoteView Congressional Ideology Project)",
-	"bio_guide_url": "https://bioguideretro.congress.gov/Home/MemberDetails?memIndex=",
-	"bio_guide_base": "https://bioguideretro.congress.gov",
+	"bio_guide_url": "https://bioguide.congress.gov/bioguide/photo/",
+	"bio_guide_base": "https://bioguide.congress.gov/",
 	"wiki_base_search_url": "http://en.wikipedia.org/w/api.php?action=query&prop=revisions&rvprop=content&format=json&titles=",
 	"wiki_image_search_url": "http://en.wikipedia.org/w/api.php?action=query&prop=images&format=json&titles="
 }
