--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.24.0"
 prettytable = "^0.7.2"
 pymongo = "^3.10.1"
 beautifulsoup4 = "^4.9.1"
+Wand = "^0.6.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
