--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ prettytable = "^0.7.2"
 pymongo = "^3.10.1"
 beautifulsoup4 = "^4.9.1"
 Wand = "^0.6.5"
+Pillow = "^4.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
