--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ beautifulsoup4 = "^4.9.1"
 Wand = "^0.6.5"
 Pillow = "^9.2.0"
 urllib3 = "^1.26.11"
+opencv-python = "^4.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
